--- a/public/html/startStaticPage.html
+++ b/public/html/startStaticPage.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Ебание собак</title>
+    <title>Главная</title>
 </head>
 <body>
-    <h1>Тут начинается анальное доминирование в программировании!</h1>
+    <h1>Тут начинается главная страница</h1>
     <img src ="/app/public/img/pic.jpg" alt="Golang">
     <ul>
         <li>Первый элемент маркированного списка</li>
